--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -5365,3 +5365,27 @@ Pagination
     line-height: 150px;
   }
 }/*# sourceMappingURL=style.css.map */
+
+/*===Custom StyleSheets===*/
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #888; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #d8d8d8;
+  border: 2px solid #888;
+  border-width: 0 2px;
+  border-radius: 2px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #e3e3e3; 
+}
